# ink

./: .gitignore  README.md
cli/template/: Cargo.toml
cli/template/src/: lib.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/env/: api.rs  backend.rs  calls.rs  chainx_calls.rs  chainx_types.rs  error.rs  mod.rs  test_env.rs  traits.rs  types.rs
core/src/env/call/: builder.rs  instantiate.rs  utils.rs
core/src/env/engine/off_chain/: impls.rs  runtime_storage.rs  test_api.rs  typed_encoded.rs
core/src/env/engine/off_chain/db/: accounts.rs  events.rs
core/src/env/engine/on_chain/: buffer.rs  impls.rs
core/src/env/srml/: types.rs
core/src/env/srml/srml_only/: impls.rs
core/src/env/xrml/: calls.rs  mod.rs  types.rs
core/src/env/xrml/xrml_only/: impls.rs  mod.rs  sys.rs
core/src/env2/: chainx_call.rs  chainx_calls.rs  chainx_types.rs  mod.rs  property.rs  traits.rs  types.rs
core/src/env2/call/: builder.rs  create.rs  utils.rs
core/src/env2/env_access/: immutable.rs  mutable.rs
core/src/env2/test/: accessor.rs  record.rs  typed_encoded.rs
core/src/env2/xrml/: ext.rs  impls.rs  mod.rs
core/src/storage/: key.rs  non_clone.rs  value.rs
core/src/storage/cell/: raw_cell.rs  sync_cell.rs  typed_cell.rs
core/src/storage/chunk/: raw_chunk.rs  typed_chunk.rs
core/src/storage/chunk/sync_chunk/: chunk.rs
core/src/storage/collections/binary_heap/: duplex_sync_chunk.rs  impls.rs  tests.rs
core/src/storage/collections/bitvec/: block.rs  pack.rs  vec.rs
core/src/storage/collections/btree_map/: impls.rs  node.rs  search.rs
core/src/storage/collections/hash_map/: impls.rs
core/src/storage/collections/stash/: impls.rs
core/src/storage/collections/vec/: impls.rs
examples/delegator/: lib.rs
examples/delegator/accumulator/: lib.rs
examples/delegator/adder/: lib.rs
examples/delegator/subber/: lib.rs
examples/lang/cross_call_pcx_transfer/: Cargo.toml  README.md
examples/lang/cross_call_pcx_transfer/.ink/abi_gen/: Cargo.toml
examples/lang/cross_call_pcx_transfer/pcx_transfer/: Cargo.toml
examples/lang/cross_call_pcx_transfer/pcx_transfer/src/: lib.rs
examples/lang/cross_call_pcx_transfer/src/: lib.rs
examples/lang/flipper/: Cargo.toml
examples/lang/pcx_transfer/: Cargo.toml
examples/lang/pcx_transfer/.ink/abi_gen/: Cargo.toml
examples/lang/pcx_transfer/src/: lib.rs
examples/lang2/cross_call_pcx_transfer/: Cargo.toml  lib.rs
examples/lang2/cross_call_pcx_transfer/.ink/abi_gen/: Cargo.toml  main.rs
examples/lang2/cross_call_pcx_transfer/pcx_transfer/: Cargo.toml
examples/lang2/cross_call_pcx_transfer/pcx_transfer/src/: lib.rs
examples/lang2/pcx_transfer/: Cargo.toml
examples/lang2/pcx_transfer/.ink/abi_gen/: Cargo.toml  main.rs
examples/lang2/pcx_transfer/src/: lib.rs
examples/pcx_transfer/: Cargo.toml  lib.rs
examples/pcx_transfer/.ink/abi_gen/: Cargo.toml  main.rs
examples/pcx_transfer/src/: lib.rs
examples/xbtc_demo/: Cargo.toml  lib.rs
examples/xbtc_demo/.ink/abi_gen/: Cargo.toml  main.rs
examples/xbtc_demo/xrc20/: Cargo.toml  lib.rs
examples/xbtc_silly_game/: Cargo.toml  lib.rs
examples/xbtc_silly_game/.ink/abi_gen/: Cargo.toml  main.rs
examples/xbtc_silly_game/xrc20/: Cargo.toml  lib.rs
lang/: Cargo.toml
lang/macro/: Cargo.toml
lang/macro/src/codegen/: cross_calling.rs  events.rs
lang/src/: dispatcher.rs  env_access.rs  old_abi.rs  traits.rs
lang2/: Cargo.toml
lang2/macro/src/ir/: data.rs
lang2/src/: dispatcher.rs  traits.rs
model/: Cargo.toml
model/src/: contract.rs  exec_env.rs  lib.rs  msg.rs  msg_handler.rs
primitives/: Cargo.toml
primitives/src/: key.rs  lib.rs
