[package]
name = "cross_call_pcx_transfer"
version = "0.1.0"
authors = ["ChainX <https://github.com/chainx-org>"]
edition = "2018"

[dependencies]
ink_abi = { path = "../../../abi", default-features = false, features = ["derive"], optional = true }
ink_core = { path = "../../../core", default-features = false, features = ["old-codec"] }
ink_model = { path = "../../../model", default-features = false, features = ["old-codec"] }
ink_lang = { path = "../../../lang", default-features = false, features = ["old-codec"] }

scale = { package = "parity-codec", version = "3.5", default-features = false, features = ["derive"] }
type-metadata = { git = "https://github.com/type-metadata/type-metadata.git", default-features = false, features = ["derive"], optional = true }

pcx_transfer = { path = "pcx_transfer", default-features = false, features = ["ink-as-dependency"] }

[lib]
name = "cross_call_pcx_transfer"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
	# Used for ABI generation.
	"rlib",
]

[features]
default = ["test-env"]
std = [
    "ink_abi/std",
    "ink_core/std",
    "ink_model/std",
    "ink_lang/std",
    "scale/std",
    "type-metadata/std",

    "pcx_transfer/std",
]
test-env = [
	"std",
    "ink_core/test-env",
    "ink_model/test-env",
    "ink_lang/test-env",
    "type-metadata/std",

    "pcx_transfer/test-env",
]
ink-generate-abi = [
    "std",
    "ink_abi",
    "type-metadata",
    "ink_core/ink-generate-abi",

    "pcx_transfer/ink-generate-abi",
]
ink-as-dependency = []

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
overflow-checks = true

[workspace]
members = [
	".ink/abi_gen",
    "pcx_transfer"
]
exclude = [
	".ink"
]
