[package]
name = "pcx_transfer"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2018"

[dependencies]
ink_abi = { git = "https://github.com/chainx-org/ink", branch = "ink2.0", package = "ink_abi", default-features = false, features = ["derive"], optional = true }
ink_core = { git = "https://github.com/chainx-org/ink", branch = "ink2.0", package = "ink_core", default-features = false, features = ["old-codec"] }
ink_lang2 = { git = "https://github.com/chainx-org/ink", branch = "ink2.0", package = "ink_lang2", default-features = false, features = ["old-codec"] }
ink_model = { git = "https://github.com/chainx-org/ink", branch = "ink2.0", package = "ink_model", default-features = false, features = ["old-codec"] }
ink_prelude = { git = "https://github.com/chainx-org/ink", branch = "ink2.0", package = "ink_prelude", default-features = false }

blake2-rfc = { version = "0.2.18", default-features = false }
scale = { package = "parity-codec", version = "3.5", default-features = false, features = ["derive"] }
type-metadata = { git = "https://github.com/type-metadata/type-metadata.git", default-features = false, features = ["derive"], optional = true }

[lib]
name = "pcx_transfer"
crate-type = [
    # Used for normal contract Wasm blobs.
    "cdylib",
    # Used for ABI generation.
    "rlib",
]

[features]
default = ["test-env"]
std = [
    "ink_abi/std",
    "ink_core/std",
    "ink_model/std",
    "ink_lang2/std",
    "scale/std",
    "type-metadata/std",
]
test-env = [
    "std",
    "ink_core/test-env",
    "ink_model/test-env",
    "ink_lang2/test-env",
]
ink-generate-abi = [
    "std",
    "ink_abi",
    "type-metadata",
    "ink_core/ink-generate-abi",
    "ink_lang2/ink-generate-abi",
]
ink-as-dependency = []

