[package]
name = "abi-gen"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
publish = false

[[bin]]
name = "abi-gen"
path = "main.rs"

[dependencies]
contract = { path = "../..", package = "xbtc_demo", default-features = false, features = ["ink-generate-abi"] }
ink_lang = { git = "https://github.com/chainx-org/ink", branch = "env-revision3", package = "ink_lang", default-features = false, features = ["ink-generate-abi"] }
serde = "1.0"
serde_json = "1.0"
